--- a/hamster-core/pom.xml
+++ b/hamster-core/pom.xml
@@ -70,6 +70,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.18</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
