--- a/hamster-core/pom.xml
+++ b/hamster-core/pom.xml
@@ -104,6 +104,11 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec-http2</artifactId>
+			<version>4.1.0.Final</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 	</repositories>
