--- a/hamster-admin/src/main/resources/static/package.json
+++ b/hamster-admin/src/main/resources/static/package.json
@@ -8,7 +8,7 @@
     "local": "webpack-dev-server --config ./webpack.dev.config.js",
     "dev": "npm run clean && webpack  --config ./webpack.dev.config.js",
     "test": "npm run clean && webpack  --config ./webpack.test.config.js",
-    "prod": "npm run clean && webpack  --config ./webpack.prod.config.js"
+    "prod": "npm run clean && webpack -p --progress --config ./webpack.prod.config.js"
   },
   "keywords": [
     "admin",
