应用关系图

--- a/hamster-admin/src/main/resources/static/package.json
+++ b/hamster-admin/src/main/resources/static/package.json
@@ -18,11 +18,12 @@
   "author": "tanlinquan@cmhk.com",
   "license": "MIT",
   "dependencies": {
-    "antd": "^2.1.0",
+    "antd": "^2.2.1",
     "babel-polyfill": "^6.13.0",
     "bluebird": "^3.4.1",
     "classnames": "^2.2.5",
-    "font-awesome": "^4.6.3",
+    "echarts-for-react": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^1.12.4",
     "lodash": "^4.14.2",
     "normalize.css": "^4.2.0",
