--- a/hamster-admin/src/main/resources/static/package.json
+++ b/hamster-admin/src/main/resources/static/package.json
@@ -27,6 +27,7 @@
     "jquery": "^1.12.4",
     "lodash": "^4.14.2",
     "normalize.css": "^4.2.0",
+    "rc-queue-anim": "^0.13.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.6.1"
