--- a/hamster-admin/src/main/resources/application.properties
+++ b/hamster-admin/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.resources.static-locations=classpath:/static/dist/
 hamster.basePath=hamster
 hamster.clusterAddrs=http://192.168.20.171:2379,http://192.168.20.172:2379,http://192.168.20.173:2379
+#hamster.clusterAddrs=http://localhost:2379
 
